--- a/src/App.css
+++ b/src/App.css
@@ -152,6 +152,12 @@ main {
 footer {
   display: flex;
   justify-content: center;
+  position: center;
+  width: 100%;
+  line-height: 60px;
+  height: 120px;
+  text-align: center;
+  /*background-color: #040b52;*/
 }
 
 .footer-container {
@@ -694,55 +700,6 @@ input:checked+.slider:before {
   align-items: center;
 }
 
-.comicImage {
-  flex: 0 1 40%;
-  align-self: stretch;
-}
-
-.comicDetails {
-  flex: 0 1 50%;
-  align-self: stretch;
-}
-
-.comicImage img {
-  width: 100%;
-  height: auto;
-}
-
-.comicImage p {
-  font-size: 14px;
-  font-style: italic;
-  color: var(--dark-grey-color);
-}
-
-.comicDetails h3 {
-  padding-bottom: 10px;
-  border-bottom: 1px solid var(--light-grey-color);
-  text-transform: uppercase;
-}
-
-.comicDetails p {
-  font-style: italic;
-  margin-bottom: 40px;
-  color: var(--dark-grey-color);
-}
-
-.comicDetails a {
-  flex: 0 1 60%;
-  display: inline-block;
-  background-color: var(--dark-red-color);
-  padding: 10px 15px;
-  margin-right: 10px;
-  color: #ffffff;
-  text-align: center;
-  text-decoration: none;
-  transform: skew(-15deg);
-}
-
-.comicDetails a:hover {
-  background-color: var(--dark-grey-color);
-}
-
 .modalFooter {
   background-color: var(--white-color);
   padding: 10px;
@@ -816,11 +773,6 @@ input:checked+.slider:before {
     flex: 0 1 40%;
     justify-content: center;
     align-items: center;
-  }
-
-  .btn-welcome {
-    margin-top: 0;
-    flex-basis: 300px;
   }
 }
 
